Fix some iframe issues on Safari mobile.

--- a/themes/custom/mat/sass/components/paragraphs/_paragraph--basic-page.scss
+++ b/themes/custom/mat/sass/components/paragraphs/_paragraph--basic-page.scss
@@ -116,15 +116,19 @@
   .field--name-field-iframe {
       position: relative;
       width: 100%;
-      height: 0;
       padding-bottom: 56.25%;
+      overflow: auto;
+      -webkit-overflow-scrolling: touch;
+      height: 0;
   }
 
   iframe {
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
+      width: 1px;
+      min-width: 100%;
       height: 100%;
+      max-height: 100%;
   }
 }
